Update draft numerology page

--- a/index.html
+++ b/index.html
@@ -648,43 +648,157 @@
       <div class="jumbotron" id="numerology">
         <div class="container">
           <div id="num-intro">
-          <h1>The Basics of Numerology</h1>
+          <h2>The Basics of Numerology</h2>
           <p>Your Life Path Number/Master Number and Destiny Number-it's meaning.</p>
           </div>
           <div class="row">
-            <div class="col-sm-6" id="life-path-num">
-              <p>Calculate Your Life Path Number</P>
-              <ul>
-                <li>By reduce digits(your birth date) to a single-digit number,excluding 11 and 22(Master Numbers).</li>
-                <li>It reveals your greater purpose, including strengths, weaknesses,talents and ambitious.</li>
-                <li>It's the method to the madness.</li>
-                <li>Example: December 15,1992<br>
-                    Month 12 ==> 1+2 = 3
-                    Date 15 ==> 1+5 = 6
-                    Year 1992 ==> 1+9+9+2 ==> 21 ==> 2+1 =3
-                    Then (3+6+3) ==> 12 ==> 1+2 = 3
-                </li>
-                <li>Master number(11 or 22) suggest a high degree for learning, achievement, or success, but likely in a more stressful 
+            <div class="col-sm-6">
+              <div id="life-path-num">
+                <p><b> Calculate Your Life Path Number</b></P>
+                <ul>
+                  <li>By reduce digits(your birth date) to a single-digit number,excluding 11 and 22(Master Numbers).</li>
+                  <li>It reveals your greater purpose, including strengths, weaknesses,talents and ambitious.</li>
+                  <li>It's the method to the madness.</li>
+                  <li>Example: December 15,1992<br>
+                      Month 12 ==> 1+2 = 3
+                      Date 15 ==> 1+5 = 6
+                      Year 1992 ==> 1+9+9+2 ==> 21 ==> 2+1 =3
+                      Then (3+6+3) ==> 12 ==> 1+2 = 3
+                  </li>
+                  <li>Master number(11 or 22) suggest a high degree for learning, achievement, or success, but likely in a more stressful 
                   or high-pressure environment.</li>
-               </ul>
+                 </ul>
+              </div>
+              <div id="destiny-num">
+                <p><b> Calculate Your Destiny Number</b></p>
+                <ul>
+                  <li>By derive the root number of names or words-this is where our ancient buddy Pythagoras lends a hand.</li>
+                  <li>According to his theories, certain letters have specific numerical values, which are as follows:</li>
+                  <li>1=A,J,S  2=B,K,T  3=C,L,U<br>
+                      4=D,M,V  5=E,N,W  6=F,O,X<br>
+                      7=G,P,Y  8=H,Q,Z  9=I,R
+                  </li>
+                  <li>Example: KELLY (2+5+3+3+7 = 20)==> 2+0 = 2.</li>
+                  <li>Your Destiny Number offers insight as to how you will express your greater goals.</li>
+                </ul>
+              </div>
+            </div>  
+            <!--Number Interpretations-->
+            <div class="col-sm-6">
+              <div id="numInIntro">
+              <h3>Number Interpretations</h3>
+              <p>Scroll to find out the details.</p>
+              </div>
+              <div class="numberInterp">
+                <h3>Number 1</h3>
+                <ul>
+                  <li>Just as Aries, the first sign of the zodiac, is about action and initiation.</li>
+                  <li>In numerology, 1 is linked to forward motion.</li>
+                  <li>1 symbolizes a pioneering spirit, independent nature, and innate leadership capabilities.</li>
+                  <li>On a bad day, 1 can be a bit bossy or boastful, hiding any insecurities behind over-developed self-importance.</li> 
+                  <li>1 must remember that although it is first, it can very quickly become the loneliest number.</li> 
+                  <li>Even the most autonomous 1s need the support of their friends, family, and lovers.</li>
+                </ul>
+                <h3>Number 2</h3>
+                <ul>
+                  <li>2 is linked to sensitivity, balance, and harmony.</li> 
+                  <li>Within numerology, the 2 vibration assumes the role of the mediator, creating harmony by bringing together dissonant forces through compassion, empathy, and kindness.</li>
+                  <li>2 is linked to psychic abilities and intuition</li>
+                  <li>If this number appears as a Life Path or Destiny Number, the individual will be astute to subtle energy shifts and emotional nuances.</li> 
+                  <li>Because 2 is so sensitive, it is very conflict-averse,and can end up feeling under-appreciated or unacknowledged.</li>
+                  <li>2 must avoid seeking external validation and, instead, realize that perfect equilibrium needed already exists within.</li>
+                </ul>  
+                <h3>Number 3</h3>
+                <ul>
+                  <li>Communication is paramount for 3.</li>
+                  <li>Symbolically, 3 represents the output of two joined forces</li>
+                  <li>It is the essence of creation.</li>
+                  <li>3 is highly gifted at expression, seamlessly sharing innovative and pioneering concepts through art, writing, and oration.</li>
+                  <li>Your work inspires, motivates, and uplifts others, and 3 finds great joy making others smile.</li>
+                  <li>However, 3 is also known to be quite moody.</li>
+                  <li>If 3 feels misunderstood, may withdraw entirely.</li>
+                  <li>The escapist tendencies of 3 are easily mitigated by practicing peaceful mindfulness.</li>
+                  <li>With such an active imagination, it’s important for 3 to find moments of quiet to reset, restore, and recharge.</li>
+                </ul>
+                <h3>Number 4</h3>
+                <ul>
+                  <li>In numerology, 4 has an earthy-energy and is centered around fortifying its roots.</li> 
+                  <li>4 adamantly believes in the physical world and knows that investing in a solid infrastructure is necessary for building a lasting legacy.</li> 
+                  <li>Practical, hardworking, and responsible, the vibration of the number 4 is focused on creating logical systems that can support scalable growth.</li> 
+                  <li>There is a solidity to 4, however, that can quickly devolve into rigidity.</li>
+                  <li>4 must remember that rules are meant to enhance, not inhibit.</li> 
+                  <li>It’s easy for 4 to become stubborn, so 4 benefits from learning to loosen up and think outside-the-box.</li> 
+                  <li>4 will feel liberated and inspired by finding the bravery to take a few bold risks.</li>
+                </ul>
+                <h3>Number 5</h3>
+                <ul>
+                  <li>Free-thinking, adventurous, and progressive, 5 is defined by freedom.</li> 
+                  <li>5 needs to experience the world by engaging its five senses.</li>
+                  <li>For 5, life lessons are acquired through spontaneous acts of bravery.</li> 
+                  <li>Akin to Sagittarius energy within astrology, 5 is known for its playful, impulsive, and vivacious spirit.</li> 
+                  <li>But on the other side of its signature joie de vivre, 5 can become restless and impatient.</li>
+                  <li>Since 5 is always seeking discovery, it has a difficult time accepting life’s day-to-day responsibilities — including professional and interpersonal commitments.</li> 
+                  <li>5 must remember that when it narrows its gaze, it will discover that the most rewarding exploration exists in its own backyard.</li>
+                </ul>
+                <h3>Number 6</h3>
+                <ul>
+                  <li>6 is recognized for its nurturing, supportive, and empathic nature.</li> 
+                  <li>A true healer, 6 has the ability to problem solve in both the emotional and physical realms, helping others through its straightforward, yet gentle, approach.</li> 
+                  <li>6 has a strong sense of responsibility, and cares deeply for its friends, family, and lovers.</li>
+                  <li>This number also can easily communicate with children and animals, displaying a soft tenderness and caretaker spirit.</li> 
+                  <li>But not everything needs to be parented, and sometimes 6’s protective energy can become domineering and controlling.</li> 
+                  <li>To avoid carrying the world on its shoulders, 6 must learn to build trust and understanding for others.</li>
+                  <li>Simply put, everyone must follow their own unique path.</li>
+                </ul>
+                <h3>Number 7</h3>
+                <ul>
+                  <li>The detectives of numerology, 7 is known for its investigative abilities and analytical skills.</li> 
+                  <li>Astrologically, the number 7 can be thought of as a blend of Virgo and Scorpio energy.</li>
+                  <li>7 is extremely detail-oriented, but is driven by inner-wisdom as opposed to tangible realities.</li> 
+                  <li>7 has a keen eye, and its astute observations fuel a quick-witted, inventive spirit.</li> 
+                  <li>Because it can quickly find the flaws in almost any system, 7 is a bit of a perfectionist.</li> 
+                  <li>7 will often assume fault, so it’s important for this number to counterbalance its inherent skepticism with an open mind.</li> 
+                  <li>Not everything will be foolproof — but that’s what makes life fun.</li>
+                </ul>
+                <h3>Number 8</h3>
+                <ul>
+                  <li>8 is all about abundance. Within numerology, this number is linked to material wealth and financial success.</li> 
+                  <li>Ambitious and goal-oriented, 8 can effortlessly assume leadership positions through its natural magnetism.</li> 
+                  <li>8 applies big-picture thinking to broaden its scope, racing up the top of any ladder to reach extraordinary heights.</li> 
+                  <li>But with great power comes great responsibility: 8 breeds workaholics, and on a bad day, can become excessively controlling and possessive.</li> 
+                  <li>However, its negative qualities can be lessened by giving back to the community.</li> 
+                  <li>By using is success to help others, 8 realizes that there is nothing more valuable than contributing to the greater good.</li>
+                </ul>
+                <h3>Number 9</h3>
+                <ul>
+                  <li>As the final single digit within numerology, 9 connotes an old soul.</li> 
+                  <li>9 is no stranger life’s ups-and-downs of life — been there, done that.</li> 
+                  <li>Accordingly, 9 can effortlessly synthesize large quantities of stimuli, psychically connecting the dots to form a cohesive whole.</li> 
+                  <li>The mission for 9 is to reach its highest state of consciousness, and to help others also achieve this spiritual awareness.</li>
+                  <li>9 isn’t afraid to transform, and its malleable spirit inspires others to explore their own ranges of motion.</li> 
+                  <li>Since 9, in many ways, has transcended the physical plane, it must constantly remember to anchor itself.</li>
+                  <li>9 must learn to balance the abstract with the tangible, ultimately finding its place at the intersection of fantasy and reality.</li>
+                </ul>
+                <h3>Master Number 11</h3>
+                <ul>
+                  <li>Master Number 11 revs up the energy of Number 2.</li>
+                  <li>Its purpose is to heal the self and others through its elevated psychic abilities.</li> 
+                  <li>Often times, Master Number 11's intuitive gifts are a result of extreme life circumstances.</li>
+                  <li>Master Number 11 has no choice but to cultivate extrasensory talents.</li> 
+                  <li>In numerology, Master Number 11 is connected to spiritual enlightenment, awareness, and philosophical balance.</li>
+                </ul>
+                <h3>Master Number 22</h3>
+                <ul>
+                  <li>Master Number 22, often referred to as the Master Builder, expands on the vibrations of Number 4.</li> 
+                  <li>Master Number 22 is inspired to create platforms in the physical realm that transcend immediate realities.</li>
+                  <li>By fusing the tangible and intangible, Master Number 22 cultivates a dynamic long-term legacy.</li> 
+                  <li>Master Number 22's skills are usually a byproduct of early childhood instability that fuels innovative thought.</li> 
+                  <li>Industrious, creative, and dependable, Master Number 22 is always on a mission to transform.</li>
+                </ul>
+              </div>
+       
             </div>
-            <div class="col-sm-6" id="destiny-num">
-              <p>Calculate Your Destiny Number</p>
-              <ul>
-                <li>By derive the root number of names or words-this is where our ancient buddy Pythagoras lends a hand.</li>
-                <li>According to his theories, certain letters have specific numerical values, which are as follows:</li>
-                <li>1=A,J,S  2=B,K,T  3=C,L,U<br>
-                    4=D,M,V  5=E,N,W  6=F,O,X<br>
-                    7=G,P,Y  8=H,Q,Z  9=I,R
-                </li>
-                <li>Example: KELLY (2+5+3+3+7 = 20)==> 2+0 = 2.</li>
-                <li>Your Destiny Number offers insight as to how you will express your greater goals.</li>
-              </ul>
-            </div>
-          </div>
-          <div id="number-interpretations">
-            
-          </div>
+          </div>    
         </div>
       </div>
     </section>
@@ -700,8 +814,8 @@
               <!--display result-->
               <div id="results"></div>
               <!--generate the number-->
-              <div class="submit">
-                <button onclick="generate(7, 1, 49);">Generate</button>
+              <div style="text-align: center;">
+                <button id="submit" onclick="generate(7, 1, 49);">Generate</button>
               </div>
             </div>
             <div class="col-sm-3"></div>
@@ -753,8 +867,9 @@
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-  <script src="script.js"></script>
-  <script src="generate.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/generate.js"></script>
+  <script src="js/modal.js"></script>
   </body>
  
 </html>
