Update layout color and resposive

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <div class="container">
             <!--banner-->
             <div class="row">
-              <div class="col-sm-2" id="title">
+              <div class="col-sm-3" id="title">
                 <h1>Welcome To Numbers Facts</h1>
               </div>
               <div class="col-sm-3" id="search-description">
                 <h2>Search for Interesting Numbers Facts</h2>
               </div>
-              <div class="col-sm-7" id="search-info">
+              <div class="col-sm-6" id="search-info">
                 <div class="row">
                   <h2>Please key in a number:</h2>
                 </div> 
@@ -807,7 +807,7 @@
       <div class="jumbotron" id="game">
         <!--Content start-->
         <div class="container">
-          <h1 style="color:#6B8E23;text-align: center;">Game: Lucky Numbers Prediction</h1>
+          <h1 style="color:#FFDAB9;text-align: center;">Game: Lucky Numbers Prediction</h1>
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
