amend more responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand mb-0 h1" href="#" style="color: #6B8E23;"></a>
           <img src="photos/home-icon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
            Numbers
-        </a>
+        
         <!--collapse button-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" 
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
         <!--navigation item-->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" style="color:black;"href="#home">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" style="color:black;" href="#home">Home<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#timeline">Timeline</a>
             <a class="nav-item nav-link" href="#maths">Math</a>
             <a class="nav-item nav-link" href="#numerology">Numerology</a>
@@ -50,18 +50,18 @@
             <!--banner-->
             <div class="row">
               <div class="col-sm-3" id="title">
-                <h1>Welcome To Numbers Facts</h1>
+                <h5>Welcome To Numbers Facts</h5>
               </div>
               <div class="col-sm-3" id="search-description">
-                <h2>Search for Interesting Numbers Facts</h2>
+                <h5>Search for Interesting Numbers Facts</h5>
               </div>
               <div class="col-sm-6" id="search-info">
                 <div class="row">
-                  <h2>Please key in a number:</h2>
+                  <h5>Please key in a number:</h>
                 </div> 
                 <div class="row">
                   <form>
-                    <input id="numberFacts" type="text" value=""required>
+                    <input id="numberFacts" type="text" value=" "required>
                     <input id="search" type="button" value="Search">
                   </form>
                 </div> 
@@ -647,7 +647,7 @@
     <section>
       <div class="jumbotron" id="numerology">
         <div class="container">
-          <div id="num-intro">
+          <div id="num-banner">
           <h2>The Basics of Numerology</h2>
           <p>Your Life Path Number/Master Number and Destiny Number-it's meaning.</p>
           </div>
@@ -856,6 +856,11 @@
               <div class="rotate">11</div>
             </div>
           </div>
+          <div class="row">
+            <div class="footer">
+              <b>Copyright © 2020 Yeoh Seok Khim. All Rights Reserved</b>
+            </div>  
+          </div>  
         </div>
         <!--content end-->    
       </div>
