modify style of timeline section

--- a/index.html
+++ b/index.html
@@ -88,88 +88,84 @@
           <div class="row">
             <h1 style="color:#FFDAB9;">Timeline of Number</h1>
           </div>
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="main-timeline-section">
-                  <div class="timeline-start"></div>
-                  <div class="conference-center-line"></div>
-                  <div class="conference-timeline-content">
-                    <div class="timeline-article timeline-article-top">
-                        <div class="content-date">
-                            <span>12th Century</span>
-                        </div>
-                        <div class="meta-date"></div>
-                        <div class="content-box">
-                          <p>Arabic numerals</p>
-                        </div>
-                    </div>
-                    <div class="timeline-article timeline-article-bottom">
-                        <div class="content-date">
-                            <span>50BC</span>
-                        </div>
-                        <div class="meta-date"></div>
-                        <div class="content-box">
-                          <p>Indian Numerals</p>
-                        </div>
-                    </div> 
-                    <div class="timeline-article timeline-article-top">
-                      <div class="content-date">
-                          <span>200BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Chinese Number Rod System</p>
-                      </div>
-                    </div>
-                    <div class="timeline-article timeline-article-bottom">
-                      <div class="content-date">
-                          <span>300BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Brahmi Numerals;the first Indian use of zero as a digit (indicated by a dot)</p>
-                      </div>
-                    </div> 
-                    <div class="timeline-article timeline-article-top">
-                      <div class="content-date">
-                          <span>2,000BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Babylonian Cuneiform Numerals</p>
-                      </div>
-                    </div>
-                    <div class="timeline-article timeline-article-bottom">
-                      <div class="content-date">
-                          <span>2,800BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Earliest use of decimal ratios during Indus Valley Civilization</p>
-                      </div>
-                    </div> 
-                    <div class="timeline-article timeline-article-top">
-                      <div class="content-date">
-                          <span>3,000BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Egyptian Numeral Hieroglyphs</p>
-                      </div>
-                    </div>
-                    <div class="timeline-article timeline-article-bottom">
-                      <div class="content-date">
-                          <span>3,400BC</span>
-                      </div>
-                      <div class="meta-date"></div>
-                      <div class="content-box">
-                        <p>Sexagesimal/ Sumerian Numerals</p>
-                      </div>
-                    </div> 
-                   </div>
-                   
-                  <div class="timeline-end"></div>
-                  </div>
+          <div class="timeline-section">
+            <!--Content on the left-->
+            <div class="article left">
+              <div class="content-box">
+                <h6>12th Century</h6>
+                <p>Indian numerals have been modified by Persian mathematicians 
+                  al-Khwārizmī to form the modern Arabic numerals (used universally in the modern 
+                  world.And the Arabic numerals reach Europe through the Arabs.</p>
+              </div>
+            </div>
+            <!--content on the right-->
+            <div class="article right">
+              <div class="content-box">
+                <h6>550AD</h6>
+                <p>Hindu mathematicians give zero a numeral representation in the positional notation Indian numeral system.</p>
+              </div>
+            </div>
+            <!--Content on the left-->
+            <div class="article left">
+              <div class="content-box">
+                <h6>300AD</h6>
+                <p>The earliest known use of zero as a decimal digit is introduced by Indian mathematicians.</p>
+              </div>
+            </div>
+            <!--Content on the right-->
+            <div class="article right">
+              <div class="content-box">
+                <h6>50BC</h6>
+                <p>Indian numerals, the first positional notation base-10 numeral system, begins developing in India.</p>
+              </div>
+            </div> 
+            <!--Content on the left-->
+            <div class="article left">
+              <div class="content-box">
+                <h6>200BC</h6>
+                <p>Chinese Number Rod Sytem : Uses of rods represent nunbers 1-9 but no concept / symbol for zero and 
+                  used a blank space.
+                </p>
+              </div>
+            </div>
+            <!--Content on the right-->
+            <div class="article right">
+              <div class="content-box">
+                <h6>300BC</h6>
+                <p> Brahmi numerals are conceived in India.</p>
+                <p>
+                  Indian mathematician Pingala writes the “Chhandah-shastra”, which contains the first Indian use of zero as 
+                  a digit (indicated by a dot) and also presents a description of a binary numeral system.</p>
+              </div>
+            </div>
+            <!--Content on the left-->
+            <div class="article left">
+              <div class="content-box">
+                <h6>2000BC</h6>
+                <p>Babylonian cuneiform numerals : the Babylonians use a base-60 decimal system, and compute the first known approximate value of π at 3.125.</p>
+              </div>
+            </div>
+            <!--COntent on the right-->
+            <div class="article right">
+              <div class="content-box">
+                <h6>2800BC</h6>
+                <p>Indus Valley Civilization on the Indian subcontinent, earliest use of decimal ratios in a uniform system of ancient weights and measures, the smallest unit of 
+                  measurement used is 1.704 millimetres and the smallest unit of mass used is 28 grams.</p>
+              </div>
+            </div>
+            <!--Content on the left-->
+            <div class="article left">
+              <div class="content-box">
+                <h6>3100BC</h6>
+                <p>Egyptian numeral hieroglyphs :  Egypt, earliest known decimal system allows indefinite counting by way of introducing new symbols.</p>
+              </div>
+            </div>
+            <!--Content on the right-->
+            <div class="article right">
+              <div class="content-box">
+                <h6>3400BC</h6>
+                <p>Sexagesimal / Sumerian Numerals : the Sumerians invent the first numeral system and a system of weights and measures.</p>
+              </div>
             </div>
           </div>
         </div>
