--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <!--navigation bar menu-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <img src="photos/home-icon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-        <a class="navbar-brand" href style="color:#6B8E23">Numbers</a>
+        <a class="navbar-brand" href="#" style="color:#6B8E23">Numbers</a>
         <!--collapse button-->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!--navigation item-->
@@ -58,7 +58,7 @@
                 </div> 
                 <div class="row">
                   <form>
-                    <input id="numberFacts" type="text" value=" "required>
+                    <input id="numberFacts" type="text" value=" " required>
                     <input id="search" type="button" value="Search">
                   </form>
                 </div> 
@@ -815,39 +815,14 @@
           </div>
           <!--display number in animate-->
           <div class="row">
-            <div class="col-sm-1">
               <div class="rotate">1</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">2</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">3</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">4</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">5</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">6</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">7</div>
-            </div>
-            <div class="col-sm-1">
               <div class="rotate">8</div>
-            </div>
-            <div class="col-sm-1">
-              <div class="rotate">9</div>
-            </div>
-            <div class="col-sm-1">
-              <div class="rotate">10</div>
-            </div>
-            <div class="col-sm-1">
-              <div class="rotate">11</div>
-            </div>
           </div>
           <div class="row">
             <div class="footer">
